@@ -600,7 +600,10 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 		$this->log_debug( __METHOD__ . '() - log body setting ' . $this->body . ' :: ' . $this->raw_body );
 		if ( $this->body == 'raw' ) {
 			$body = $this->raw_body;
+			add_filter( 'gform_merge_tag_filter', array( $this, 'filter_gform_merge_tag_webhook_raw_encode' ), 40, 5 );
 			$body = GFCommon::replace_variables( $body, $this->get_form(), $entry, false, false, false, 'text' );
+			remove_filter( 'gform_merge_tag_filter', array( $this, 'filter_gform_merge_tag_webhook_raw_encode' ), 40 );
+
 			$this->log_debug( __METHOD__ . '() - got body after replace vars: ' . $body );
 		} elseif ( in_array( $method, array( 'POST', 'PUT', 'PATCH' ) ) ) {
 			$body = $this->get_request_body();
@@ -792,6 +795,24 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 		do_action( 'gravityflow_post_webhook', $response, $args, $entry, $this );
 
 		return $step_status;
+	}
+
+	/**
+	* Ensure gform_merge_tag contents to be passed to the outgoing webhook are properly escaped.
+	*
+	* @since 2.4.5
+	*
+	* @param string              $value       The current merge tag value after initial tag conversion.
+	* @param string              $merge_tag   The merge tag being executed.
+	* @param string              $modifier    The string containing any modifiers for this merge tag.
+	* @param GF_Field            $field       The current field.
+	* @param mixed               $raw_value   The raw value submitted for this field.
+	*
+	* @return string
+	*/
+	function filter_gform_merge_tag_webhook_raw_encode( $value, $merge_tag, $modifier, $field, $raw_value ) {
+		$value = substr( json_encode( $value ), 1, -1 );
+		return $value;
 	}
 
 	/**
